syntax = "proto3";
package proto;

import "google/protobuf/empty.proto";

option go_package = "./proto";

message Credential {
    string username = 1;
    string password = 2;
}

message Token {
    string token = 1;
}

service LoginService {
    rpc Login(Credential) returns (Token);
    rpc ExtendToken(google.protobuf.Empty) returns (Token);
}
